fix media queries in base.css to improve padding on smaller screens, add missing profile link to mobile-header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -301,3 +301,37 @@ input[name='q']::placeholder {
         height: calc(100vh - 116px);
     }
 }
+
+.display-4.logo-font.text-red {
+    font-size: 2rem;
+}
+
+.nav-link {
+    padding: 0.15rem;
+}
+
+.nav-link i.fa-lg {
+    font-size: 1rem;
+}
+
+.navbar-toggler {
+    padding: .6rem .6rem;
+    font-size: 1rem;
+}
+
+.btn.btn-outline-red.rounded-0,
+.btn.btn-red.rounded-0 {
+    padding: .375rem .375rem;
+
+}
+
+.btn.btn-outline-red.rounded-0.btn-lg,
+.btn.btn-red.rounded-0.btn-lg {
+    padding: .375rem .375rem;
+    font-size: .75rem;
+
+}
+
+.increment-qty, .decrement-qty {
+    padding: 0.25rem .5rem !important;
+}
